[gd_scene load_steps=8 format=3 uid="uid://dtllx04gp77mu"]

[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/MainMenu/problem_selection.gd" id="1_aqrhn"]
[ext_resource type="PackedScene" uid="uid://b8jrtk1lv0oo0" path="res://Scenes and Scripts/UI/ProblemSelection/problem_list.tscn" id="1_gfl8q"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="2_bvxeb"]
[ext_resource type="PackedScene" uid="uid://c3m8fesktmd85" path="res://Scenes and Scripts/UI/ProblemSelection/problem_set_list.tscn" id="3_chpqf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3cex"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ergd"]
resource_local_to_scene = true
shader = ExtResource("2_bvxeb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ved6x"]
resource_local_to_scene = true
shader = ExtResource("2_bvxeb")

[node name="ProblemSelection" type="TabContainer"]
offset_right = 294.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_q3cex")
tabs_visible = false
use_hidden_tabs_for_min_size = true
script = ExtResource("1_aqrhn")

[node name="ProblemSetList" parent="." instance=ExtResource("3_chpqf")]
material = SubResource("ShaderMaterial_1ergd")
layout_mode = 2

[node name="ProblemList" parent="." instance=ExtResource("1_gfl8q")]
visible = false
material = SubResource("ShaderMaterial_ved6x")
layout_mode = 2

[connection signal="back" from="ProblemSetList" to="." method="_on_problem_set_list_back"]
[connection signal="enter_problem_set" from="ProblemSetList" to="." method="_on_problem_set_list_enter_problem_set"]
[connection signal="back" from="ProblemList" to="." method="_on_problem_list_back"]
